--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "@reduxjs/toolkit": "^1.9.2",
+    "classnames": "^2.3.2",
     "mongodb": "^5.0.0",
     "mongoose": "^6.9.0",
     "next": "13.1.6",
