--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
-    "sass": "^1.58.0"
+    "sass": "^1.58.0",
+    "swiper": "^9.0.4"
   }
 }
