--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^5.0.0",
     "mongoose": "^6.9.0",
     "next": "13.1.6",
+    "next-auth": "^4.19.2",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
