JSON web tokens & Mongodb adapter, github provider

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
+# -----------Database--------------
 MONGODB_URL=mongodb+srv://quylv:XlTyyf1WvMo356mi@cluster0.lvs8gko.mongodb.net/shoppay?retryWrites=true&w=majority
+# -----------Nexth Auth--------------
+JWT_SECRET=RkxthydY6GVbSLsw
+NEXTAUTH_URL=http://localhost:3000
+# -----------Github Provider--------------
+GITHUB_ID=93fa0d4cb91e1cdb59bc
+GITHUB_SECRET=a260af9df366bf2ab1650c16e8241c5d3a70f9fa
