--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.6",
     "@reduxjs/toolkit": "^1.9.2",
     "classnames": "^2.3.2",
@@ -27,5 +28,8 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.58.0",
     "swiper": "^9.0.4"
+  },
+  "devDependencies": {
+    "typescript": "4.9.5"
   }
 }
