remove github provider, add google provider

--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ NEXTAUTH_URL=http://localhost:3000
 # -----------Github Provider--------------
 GITHUB_ID=93fa0d4cb91e1cdb59bc
 GITHUB_SECRET=a260af9df366bf2ab1650c16e8241c5d3a70f9fa
+# -----------Google Provider--------------
+GOOGLE_ID=274185769445-h0k76meai1gabcqskl8aob29cclidkvf.apps.googleusercontent.com
+GOOGLE_SECRET=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
