--- a/.env
+++ b/.env
@@ -4,8 +4,12 @@ MONGODB_URL=mongodb+srv://quylv:XlTyyf1WvMo356mi@cluster0.lvs8gko.mongodb.net/sh
 JWT_SECRET=RkxthydY6GVbSLsw
 NEXTAUTH_URL=http://localhost:3000
 # -----------Github Provider--------------
-GITHUB_ID=93fa0d4cb91e1cdb59bc
-GITHUB_SECRET=a260af9df366bf2ab1650c16e8241c5d3a70f9fa
+# GITHUB_ID=93fa0d4cb91e1cdb59bc
+# GITHUB_SECRET=a260af9df366bf2ab1650c16e8241c5d3a70f9fa
 # -----------Google Provider--------------
 GOOGLE_ID=274185769445-h0k76meai1gabcqskl8aob29cclidkvf.apps.googleusercontent.com
 GOOGLE_SECRET=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
+# -----------Auth0 Provider--------------
+AUTH0_CLIENT_ID=41ZPW334YyXb9iAdbBgPIjPnovHq6HGV
+AUTH0_CLIENT_SECRET=tsJGSgoicbq8U3ZOKYWpOa6OlJSAyNy8UayXdAhQPz4kRp2mvGtv-WNc61lgpcy5
+AUTH0_ISSUER=https://dev-iosd7bwxqf0h4rcs.us.auth0.com
