--- a/.env
+++ b/.env
@@ -10,6 +10,6 @@ NEXTAUTH_URL=http://localhost:3000
 GOOGLE_ID=274185769445-h0k76meai1gabcqskl8aob29cclidkvf.apps.googleusercontent.com
 GOOGLE_SECRET=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
 # -----------Auth0 Provider--------------
-AUTH0_CLIENT_ID=41ZPW334YyXb9iAdbBgPIjPnovHq6HGV
-AUTH0_CLIENT_SECRET=tsJGSgoicbq8U3ZOKYWpOa6OlJSAyNy8UayXdAhQPz4kRp2mvGtv-WNc61lgpcy5
-AUTH0_ISSUER=https://dev-iosd7bwxqf0h4rcs.us.auth0.com
+AUTH0_CLIENT_ID=ZYzijtpLHdw5p3ugqnUxnXbGXdAvtU51
+AUTH0_CLIENT_SECRET=pC8-xS_hoeLYciul9cDoF0NgGyZLmtpXGrT76fGb8gTdsaScXSQoB6YCpIWTJEUZ
+AUTH0_ISSUER=https://dev-82xalkesvw2wzn32.us.auth0.com
