--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/font": "13.1.6",
     "@reduxjs/toolkit": "^1.9.2",
     "classnames": "^2.3.2",
+    "formik": "^2.2.9",
     "mongodb": "^5.0.0",
     "mongoose": "^6.9.0",
     "next": "13.1.6",
@@ -28,7 +29,8 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.58.0",
-    "swiper": "^9.0.4"
+    "swiper": "^9.0.4",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "typescript": "4.9.5"
