validate login with yup

--- a/.env
+++ b/.env
@@ -9,7 +9,10 @@ NEXTAUTH_URL=http://localhost:3000
 # -----------Google Provider--------------
 GOOGLE_ID=274185769445-h0k76meai1gabcqskl8aob29cclidkvf.apps.googleusercontent.com
 GOOGLE_SECRET=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
+# -----------Facebook Provider--------------
+FACEBOOK_ID=216363327663959
+FACEBOOK_SECRET=34e177c383c9ab67c0aaf9d2dda993e5
 # -----------Auth0 Provider--------------
-AUTH0_CLIENT_ID=ZYzijtpLHdw5p3ugqnUxnXbGXdAvtU51
-AUTH0_CLIENT_SECRET=pC8-xS_hoeLYciul9cDoF0NgGyZLmtpXGrT76fGb8gTdsaScXSQoB6YCpIWTJEUZ
-AUTH0_ISSUER=https://dev-82xalkesvw2wzn32.us.auth0.com
+# AUTH0_CLIENT_ID=ZYzijtpLHdw5p3ugqnUxnXbGXdAvtU51
+# AUTH0_CLIENT_SECRET=pC8-xS_hoeLYciul9cDoF0NgGyZLmtpXGrT76fGb8gTdsaScXSQoB6YCpIWTJEUZ
+# AUTH0_ISSUER=https://dev-82xalkesvw2wzn32.us.auth0.com
