--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.9.0",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
+    "next-connect": "^0.13.0",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
