add jsonwebtoken bcrypt

--- a/.env
+++ b/.env
@@ -16,3 +16,7 @@ FACEBOOK_SECRET=34e177c383c9ab67c0aaf9d2dda993e5
 # AUTH0_CLIENT_ID=ZYzijtpLHdw5p3ugqnUxnXbGXdAvtU51
 # AUTH0_CLIENT_SECRET=pC8-xS_hoeLYciul9cDoF0NgGyZLmtpXGrT76fGb8gTdsaScXSQoB6YCpIWTJEUZ
 # AUTH0_ISSUER=https://dev-82xalkesvw2wzn32.us.auth0.com
+
+# -----------
+ACTIVATION_TOKEN_SECRET=RkxthydY6GVbSLswDSF8763ah214
+# -----------
