--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.6",
     "@reduxjs/toolkit": "^1.9.2",
+    "bcrypt": "^5.1.0",
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.0.0",
     "mongoose": "^6.9.0",
     "next": "13.1.6",
