--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # -----------Database--------------
-MONGODB_URL=mongodb+srv://quylv:XlTyyf1WvMo356mi@cluster0.lvs8gko.mongodb.net/shoppay?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://quylv:01TBf8FoabBEh4FQ@cluster0.lvs8gko.mongodb.net/krik?retryWrites=true&w=majority
 # -----------Nexth Auth--------------
 JWT_SECRET=RkxthydY6GVbSLsw
 NEXTAUTH_URL=http://localhost:3000
@@ -18,5 +18,5 @@ FACEBOOK_SECRET=34e177c383c9ab67c0aaf9d2dda993e5
 # AUTH0_ISSUER=https://dev-82xalkesvw2wzn32.us.auth0.com
 
 # -----------
-ACTIVATION_TOKEN_SECRET=RkxthydY6GVbSLswDSF8763ah214
+ACTIVATION_TOKEN_SECRET=RkxthydY6GVbSLsw
 # -----------
