add googleapis, nodemailer for mailing service

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ MONGODB_URL=mongodb+srv://quylv:01TBf8FoabBEh4FQ@cluster0.lvs8gko.mongodb.net/kr
 # -----------Nexth Auth--------------
 JWT_SECRET=RkxthydY6GVbSLsw
 NEXTAUTH_URL=http://localhost:3000
+BASE_URL=http://localhost:3000
 # -----------Github Provider--------------
 # GITHUB_ID=93fa0d4cb91e1cdb59bc
 # GITHUB_SECRET=a260af9df366bf2ab1650c16e8241c5d3a70f9fa
@@ -16,6 +17,12 @@ FACEBOOK_SECRET=34e177c383c9ab67c0aaf9d2dda993e5
 # AUTH0_CLIENT_ID=ZYzijtpLHdw5p3ugqnUxnXbGXdAvtU51
 # AUTH0_CLIENT_SECRET=pC8-xS_hoeLYciul9cDoF0NgGyZLmtpXGrT76fGb8gTdsaScXSQoB6YCpIWTJEUZ
 # AUTH0_ISSUER=https://dev-82xalkesvw2wzn32.us.auth0.com
+
+# -----------Mailing Service--------------
+MAILING_SERVICE_CLIENT_ID=127364050924-f6emocok0a3b3h36aojobc6dsbjn4g29.apps.googleusercontent.com
+MAILING_SERVICE_CLIENT_SECRET=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
+MAILING_SERVICE_REFRESH_TOKEN=1//04y4rAtMxGgidCgYIARAAGAQSNwF-L9IrzHKnhb5GWGnTuaGnsUHQduHArAu8wk2izxHmLc7N_aBj3IahnXQrRPdbdLl-vic7zx4
+SENDER_EMAIL_ADDRESS=quyluuxda@gmail.com
 
 # -----------
 ACTIVATION_TOKEN_SECRET=RkxthydY6GVbSLsw
