--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.0",
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
+    "googleapis": "^115.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.0.0",
     "mongoose": "^6.9.0",
@@ -23,6 +24,7 @@
     "next-auth": "^4.19.2",
     "next-connect": "^0.13.0",
     "next-redux-wrapper": "^8.1.0",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
