--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.6",
     "@reduxjs/toolkit": "^1.9.2",
+    "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
